Bug 270761 - Footer in the ppt files is not displaying.
Summary: Footer in the ppt files is not displaying.
Status: VERIFIED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/ppt (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-12 13:56 UTC by swathi
Modified: 2011-05-04 16:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data in MS Powerpoint 2003 (14.00 KB, application/vnd.ms-powerpoint)
2011-04-12 13:56 UTC, swathi
Details
Screenshot in MS Powerpoint (18.33 KB, image/x-png)
2011-04-12 13:57 UTC, swathi
Details
Screenshot in Calligra Stage (142.04 KB, image/x-png)
2011-04-12 13:58 UTC, swathi
Details
Screenshot in Calligra Stage (142.04 KB, image/x-png)
2011-04-12 14:00 UTC, swathi
Details
Screenshot in Calligra Stage (142.04 KB, image/x-png)
2011-04-12 14:01 UTC, swathi
Details
Test data in MS Powerpoint 2000 (15.00 KB, application/vnd.ms-powerpoint)
2011-04-12 14:04 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-04-12 13:56:06 UTC
Created attachment 58825 [details]
Test data in MS Powerpoint 2003

Version: git text-layoutrestructure-boemann branch
         (Using KDE 4.5.5)                
     OS: Kubuntu 10.10

Test data is in MS Powerpoint 2003 format which has footer in it.
Open the same document in calligra stage and check the display of footer.

Expected outcome:
Footer should be displayed at the bottom of the slide.

Actual outcome:
Footer is not displaying in calligra Stage.	
	
Frequency:
Always.
Comment 1 swathi 2011-04-12 13:57:15 UTC
Created attachment 58826 [details]
Screenshot in MS Powerpoint
Comment 2 swathi 2011-04-12 13:58:41 UTC
Created attachment 58827 [details]
Screenshot in Calligra Stage
Comment 3 swathi 2011-04-12 14:00:50 UTC
Created attachment 58830 [details]
Screenshot in Calligra Stage
Comment 4 swathi 2011-04-12 14:01:05 UTC
Created attachment 58831 [details]
Screenshot in Calligra Stage
Comment 5 swathi 2011-04-12 14:04:34 UTC
Created attachment 58832 [details]
Test data in MS Powerpoint 2000

Similar issue is observed for the MS Powerpoint 2000 file also.
Attaching the test data.
Comment 6 swathi 2011-04-23 11:14:13 UTC
For the test data in the below link http://www.odfworkshop.com/presentations/06_ODFWS2009_Nagarjuna.odp is also footer is not displaying.
Comment 7 Matus Uzak 2011-04-27 02:34:37 UTC
I can not reproduce.  The only issue I found is the date info in the footer for one of the test files, which should not be there. Will fix.
Comment 8 T Zachmann 2011-04-27 07:07:09 UTC
problem happens only in text-layoutrestructure-boemann as pointed out by reporter. Therefore reopening.
Comment 9 T Zachmann 2011-04-27 13:19:15 UTC
Git commit bb5f93ecc162ab0aebfa680ff171a0721aed1ef7 by Thorsten Zachmann.
Committed on 27/04/2011 at 10:01.
Pushed by zachmann into branch 'master'.

Make inserting all variables work

Before the change inserting information variables did not work. Also
updating of the variables did not work.
In cases the variables did not save the variable data in the content
the variable was also not shown.

BUG: 270761

M  +7    -2    libs/kopageapp/KoPADocument.cpp     

http://commits.kde.org/calligra/bb5f93ecc162ab0aebfa680ff171a0721aed1ef7
Comment 10 T Zachmann 2011-04-27 14:43:43 UTC
Looks like the problem was not fixed by my commit to master. Therefore reopening.
Comment 11 T Zachmann 2011-04-29 07:33:04 UTC
Git commit dbe2f9397f1156a8673dd0db0fae05f658db8400 by Thorsten Zachmann.
Committed on 29/04/2011 at 06:52.
Pushed by zachmann into branch 'master'.

Fix Bug: Footer in the ppt files is not displaying

Reactivate the presentation variables.

BUG: 270761

M  +2    -1    kpresenter/plugins/variable/CMakeLists.txt     
M  +12   -11   kpresenter/plugins/variable/PresentationVariable.cpp     
M  +5    -5    kpresenter/plugins/variable/PresentationVariable.h     

http://commits.kde.org/calligra/dbe2f9397f1156a8673dd0db0fae05f658db8400
Comment 12 swathi 2011-05-04 16:33:09 UTC
Verified in df1a8d36dcc689caecf341f3d4dfd9632cadaaf9.