Make inserting all variables work

Before the change inserting information variables did not work. Also
updating of the variables did not work.
In cases the variables did not save the variable data in the content
the variable was also not shown.

BUG: 270761